@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	7.2
-Entered-date:	2007-04-29
+Version:	7.3
+Entered-date:	2007-04-30
 Description:	hdparm - get/set hard disk parameters for Linux IDE drives.
+		v7.3 fixed version number; much better SAT compliance
 		v7.2 fixed breakage when used with old IDE driver
 		v7.1 big-endian fixes for -I, --Istdin, --Istdout
 		v7.0 major overhaul, proper SATA support, new features and tweaks
@@ -58,7 +59,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		60K hdparm-7.1.tar.gz
+		61K hdparm-7.3.tar.gz
 		1K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
